--- a/school/pom.xml
+++ b/school/pom.xml
@@ -59,6 +59,14 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
