modified zipkin config on gateway, student and schools microservices.

--- a/config-server/src/main/resources/configurations/schools.yml
+++ b/config-server/src/main/resources/configurations/schools.yml
@@ -22,4 +22,5 @@ application:
     students-url: http://localhost:8090/api/v1/students
 management:
   tracing:
-    probability: 1.0
+    sampling:
+      probability: 1.0
