--- a/config-server/src/main/resources/configurations/students.yml
+++ b/config-server/src/main/resources/configurations/students.yml
@@ -21,4 +21,5 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 management:
   tracing:
-    probability: 1.0
+    sampling:
+      probability: 1.0
